force-app/main/default/objects/FTMSSO__c/fields/LockSOCS__c.field-meta.xml
<CustomField>
    <fullName>LockSOCS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock SO-CS</label>
    <type>Checkbox</type>
</CustomField>