force-app/main/default/objects/FTMSSO__c/fields/ManifestCheck__c.field-meta.xml
<CustomField>
    <fullName>ManifestCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manifest</label>
    <type>Checkbox</type>
</CustomField>