force-app/main/default/objects/FTMSSO__c/fields/MarksAndNumbers__c.field-meta.xml
<CustomField>
    <fullName>MarksAndNumbers__c</fullName>
    <label>Marks And Numbers</label>
    <type>TextArea</type>
</CustomField>