force-app/main/default/objects/FTMSSO__c/fields/MarksNumbersAttachment__c.field-meta.xml
<CustomField>
    <fullName>MarksNumbersAttachment__c</fullName>
    <label>Marks &amp; Numbers Attachment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>