force-app/main/default/objects/FTMSSO__c/fields/Master_Freight_Collect_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Master_Freight_Collect_Prepaid__c</fullName>
    <label>Master Freight Collect/Prepaid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>