force-app/main/default/objects/FTMSSO__c/fields/MasterBookingDeadline__c.field-meta.xml
<CustomField>
    <fullName>MasterBookingDeadline__c</fullName>
    <label>Master Booking Deadline</label>
    <type>Date</type>
</CustomField>