force-app/main/default/objects/FTMSSO__c/fields/MasterBookingNo__c.field-meta.xml
<CustomField>
    <fullName>MasterBookingNo__c</fullName>
    <label>Master Booking No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>