force-app/main/default/objects/FTMSSO__c/fields/MasterCarrierConsolidator__c.field-meta.xml
<CustomField>
    <fullName>MasterCarrierConsolidator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Carrier/Consolidator</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O7</relationshipName>
    <type>Lookup</type>
</CustomField>