force-app/main/default/objects/FTMSSO__c/fields/MasterConsignee__c.field-meta.xml
<CustomField>
    <fullName>MasterConsignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O9</relationshipName>
    <type>Lookup</type>
</CustomField>