force-app/main/default/objects/FTMSSO__c/fields/MasterConsigneeDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>MasterConsigneeDetailInformation__c</fullName>
    <label>Master Consignee’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>