force-app/main/default/objects/FTMSSO__c/fields/MasterConsigneesDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>MasterConsigneesDetailInformation__c</fullName>
    <label>Master Consignee&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>