force-app/main/default/objects/FTMSSO__c/fields/MasterNotifyParty__c.field-meta.xml
<CustomField>
    <fullName>MasterNotifyParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Notify Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O8G4g</relationshipName>
    <type>Lookup</type>
</CustomField>