force-app/main/default/objects/FTMSSO__c/fields/MasterNotifyPartysDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>MasterNotifyPartysDetailInformation__c</fullName>
    <label>Master Notify Party&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>