force-app/main/default/objects/FTMSSO__c/fields/MasterShipper__c.field-meta.xml
<CustomField>
    <fullName>MasterShipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O8</relationshipName>
    <type>Lookup</type>
</CustomField>