force-app/main/default/objects/FTMSSO__c/fields/MasterShipperDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>MasterShipperDetailInformation__c</fullName>
    <label>Master Shipper’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>