force-app/main/default/objects/FTMSSO__c/fields/MasterShippersDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>MasterShippersDetailInformation__c</fullName>
    <label>Master Shipper&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>