force-app/main/default/objects/FTMSSO__c/fields/MAWBNumber__c.field-meta.xml
<CustomField>
    <fullName>MAWBNumber__c</fullName>
    <label>MAWB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>