force-app/main/default/objects/FTMSSO__c/fields/MAWBNumberonAWB__c.field-meta.xml
<CustomField>
    <fullName>MAWBNumberonAWB__c</fullName>
    <formula>IF( LEN( MAWBNumber__c) = 9,LEFT( MAWBNumber__c , 3) +&quot; &quot; + POLAOD__r.Port_Code_Short__c +&quot; &quot;+ RIGHT( MAWBNumber__c , 6),
IF( LEN( MAWBNumber__c) = 10,LEFT( MAWBNumber__c , 3) +&quot; &quot; + POLAOD__r.Port_Code_Short__c +&quot; &quot;+ RIGHT( MAWBNumber__c , 7),
IF( AND(LEN( MAWBNumber__c)= 12, CONTAINS(MAWBNumber__c,&apos;-&apos; )) ,LEFT( MAWBNumber__c , 3) +&quot; &quot; + POLAOD__r.Port_Code_Short__c +&quot; &quot;+ RIGHT( MAWBNumber__c , 8),
LEFT( MAWBNumber__c , 3) +&quot; &quot; + POLAOD__r.Port_Code_Short__c +&quot; &quot;+ RIGHT( MAWBNumber__c , 9))))</formula>
    <label>MAWB Number on AWB</label>
    <type>Text</type>
</CustomField>