force-app/main/default/objects/FTMSSO__c/fields/MBLNumber__c.field-meta.xml
<CustomField>
    <fullName>MBLNumber__c</fullName>
    <label>M B/L Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>