force-app/main/default/objects/FTMSSO__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <label>Measurement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>