force-app/main/default/objects/FTMSSO__c/fields/MeetCompletedReminder__c.field-meta.xml
<CustomField>
    <fullName>MeetCompletedReminder__c</fullName>
    <label>Meet Completed Reminder</label>
    <type>Date</type>
</CustomField>