force-app/main/default/objects/FTMSSO__c/fields/Month_Created__c.field-meta.xml
<CustomField>
    <fullName>Month_Created__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))+&apos;+&apos;+ TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Created</label>
    <type>Text</type>
</CustomField>