force-app/main/default/objects/FTMSSO__c/fields/MonthlyFMSSOID__c.field-meta.xml
<CustomField>
    <fullName>MonthlyFMSSOID__c</fullName>
    <label>Monthly FMS S/O ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>