force-app/main/default/objects/FTMSSO__c/fields/MonthlyHBLID__c.field-meta.xml
<CustomField>
    <fullName>MonthlyHBLID__c</fullName>
    <label>Monthly H B/L ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>