force-app/main/default/objects/FTMSSO__c/fields/MotherVesselFlight__c.field-meta.xml
<CustomField>
    <fullName>MotherVesselFlight__c</fullName>
    <label>Mother Vessel/Flight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>