force-app/main/default/objects/FTMSSO__c/fields/NetWeightKg__c.field-meta.xml
<CustomField>
    <fullName>NetWeightKg__c</fullName>
    <label>Net Weight(Kg)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>