force-app/main/default/objects/FTMSSO__c/fields/NotesforCustomer__c.field-meta.xml
<CustomField>
    <fullName>NotesforCustomer__c</fullName>
    <label>Notes for Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>