force-app/main/default/objects/FTMSSO__c/fields/NotesforInternalStaffs__c.field-meta.xml
<CustomField>
    <fullName>NotesforInternalStaffs__c</fullName>
    <label>Notes for Internal Staffs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>