force-app/main/default/objects/FTMSSO__c/fields/NotifyNewCustomerAlert__c.field-meta.xml
<CustomField>
    <fullName>NotifyNewCustomerAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify New Customer Alert</label>
    <type>Checkbox</type>
</CustomField>