force-app/main/default/objects/FTMSSO__c/fields/NotifyPartysAddress__c.field-meta.xml
<CustomField>
    <fullName>NotifyPartysAddress__c</fullName>
    <label>Notify Party&apos;s Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>