force-app/main/default/objects/FTMSSO__c/fields/Num_of_Original_HBL__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Original_HBL__c</fullName>
    <formula>IF(TEXT(HBLType__c)= &quot;ORIGINAL&quot; ,TEXT(NumberofOriginalHBLIssued__c), &quot;ZERO(0)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num of Original (HBL)</label>
    <type>Text</type>
</CustomField>