force-app/main/default/objects/FTMSSO__c/fields/NumberofBuyingBilling__c.field-meta.xml
<CustomField>
    <fullName>NumberofBuyingBilling__c</fullName>
    <label>Number of Buying-Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>