force-app/main/default/objects/FTMSSO__c/fields/NumberofContainersPackages__c.field-meta.xml
<CustomField>
    <fullName>NumberofContainersPackages__c</fullName>
    <label>Number of Containers/Packages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>