force-app/main/default/objects/FTMSSO__c/fields/NumberofOriginalHBLIssued__c.field-meta.xml
<CustomField>
    <fullName>NumberofOriginalHBLIssued__c</fullName>
    <label>Number of Original H B/L Issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZERO(0)</fullName>
            </value>
            <value>
                <fullName>ONE(1)</fullName>
            </value>
            <value>
                <fullName>TWO(2)</fullName>
            </value>
            <value>
                <fullName>THREE(3)</fullName>
                <default>true</default>
                <label>THREE(3)</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>