force-app/main/default/objects/FTMSSO__c/fields/NumberofOriginalMBLIssued__c.field-meta.xml
<CustomField>
    <fullName>NumberofOriginalMBLIssued__c</fullName>
    <label>Number of Original M B/L Issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>