force-app/main/default/objects/FTMSSO__c/fields/NumberofSellingBilling__c.field-meta.xml
<CustomField>
    <fullName>NumberofSellingBilling__c</fullName>
    <label>Number of Selling-Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>