force-app/main/default/objects/FTMSSO__c/fields/OtherCharges__c.field-meta.xml
<CustomField>
    <fullName>OtherCharges__c</fullName>
    <label>Other Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>