force-app/main/default/objects/FTMSSO__c/fields/OtherService__c.field-meta.xml
<CustomField>
    <fullName>OtherService__c</fullName>
    <label>Other Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C/O Service</fullName>
            </value>
            <value>
                <fullName>Customs Clearance</fullName>
            </value>
            <value>
                <fullName>Delivery and Pickup</fullName>
            </value>
            <value>
                <fullName>Fumigation</fullName>
            </value>
            <value>
                <fullName>Liff on - Liff off</fullName>
            </value>
            <value>
                <fullName>Phytosanitary</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>