force-app/main/default/objects/FTMSSO__c/fields/PackageUnitCode__c.field-meta.xml
<CustomField>
    <fullName>PackageUnitCode__c</fullName>
    <label>Package Unit Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BG</fullName>
            </value>
            <value>
                <fullName>BK</fullName>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>BN</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>BX</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CG</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CK</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>DJ</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>FB</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>