force-app/main/default/objects/FTMSSO__c/fields/ParentFTMSSO__c.field-meta.xml
<CustomField>
    <fullName>ParentFTMSSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent F/TMS S/O</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipName>F_TMS_S_O</relationshipName>
    <type>Lookup</type>
</CustomField>