force-app/main/default/objects/FTMSSO__c/fields/Payable_At_HBL__c.field-meta.xml
<CustomField>
    <fullName>Payable_At_HBL__c</fullName>
    <formula>IF(TEXT(HouseFreightCollectPrepaid__c)=&quot;Prepaid&quot;, POLAODsDetailInformation__c, PODAOAsDetailInformation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable At (HBL)</label>
    <type>Text</type>
</CustomField>