force-app/main/default/objects/FTMSSO__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>F_TMS_S_O</relationshipName>
    <type>Lookup</type>
</CustomField>