force-app/main/default/objects/FTMSSO__c/fields/PickuporDeliveryRequire__c.field-meta.xml
<CustomField>
    <fullName>PickuporDeliveryRequire__c</fullName>
    <label>Pickup or Delivery Require</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>