force-app/main/default/objects/FTMSSO__c/fields/PICofBookingAgent__c.field-meta.xml
<CustomField>
    <fullName>PICofBookingAgent__c</fullName>
    <label>PIC of Booking Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>