force-app/main/default/objects/FTMSSO__c/fields/Place_of_Delivery_Detail__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Delivery_Detail__c</fullName>
    <label>Place of Delivery Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>