force-app/main/default/objects/FTMSSO__c/fields/Place_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Place_of_issue__c</fullName>
    <label>Place of issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>