force-app/main/default/objects/FTMSSO__c/fields/PlaceofCustomsClearance__c.field-meta.xml
<CustomField>
    <fullName>PlaceofCustomsClearance__c</fullName>
    <label>Place of Customs Clearance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>