force-app/main/default/objects/FTMSSO__c/fields/PlaceofDelivery__c.field-meta.xml
<CustomField>
    <fullName>PlaceofDelivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Delivery</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PortCode__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>F_TMS_S_O1</relationshipName>
    <type>Lookup</type>
</CustomField>