force-app/main/default/objects/FTMSSO__c/fields/PlaceofDeliveryDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>PlaceofDeliveryDetailInformation__c</fullName>
    <label>Place of Delivery&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>