force-app/main/default/objects/FTMSSO__c/fields/PlaceofHouseBLIssued__c.field-meta.xml
<CustomField>
    <fullName>PlaceofHouseBLIssued__c</fullName>
    <label>Place of House B/L Issued</label>
    <length>255</length>
    <type>Text</type>
</CustomField>