force-app/main/default/objects/FTMSSO__c/fields/PlaceofReceiptDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>PlaceofReceiptDetailInformation__c</fullName>
    <label>Place of Receipt&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>