force-app/main/default/objects/FTMSSO__c/fields/PlaceofStuffing__c.field-meta.xml
<CustomField>
    <fullName>PlaceofStuffing__c</fullName>
    <label>Place of Stuffing</label>
    <type>TextArea</type>
</CustomField>