force-app/main/default/objects/FTMSSO__c/fields/POD_Formul__c.field-meta.xml
<CustomField>
    <fullName>POD_Formul__c</fullName>
    <formula>PODAOA__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POD Formula</label>
    <type>Text</type>
</CustomField>