force-app/main/default/objects/FTMSSO__c/fields/PODAOA__c.field-meta.xml
<CustomField>
    <fullName>PODAOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PortCode__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>F_TMS_S_O4</relationshipName>
    <type>Lookup</type>
</CustomField>