force-app/main/default/objects/FTMSSO__c/fields/PODAOAsDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>PODAOAsDetailInformation__c</fullName>
    <label>P.O.D(A.O.A)&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>