force-app/main/default/objects/FTMSSO__c/fields/PODAODFor__c.field-meta.xml
<CustomField>
    <fullName>PODAODFor__c</fullName>
    <formula>PODAOA__r.Name</formula>
    <label>P.O.D(A.O.A)-For</label>
    <type>Text</type>
</CustomField>