force-app/main/default/objects/FTMSSO__c/fields/POLAODsDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>POLAODsDetailInformation__c</fullName>
    <label>P.O.L(A.O.D)&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>