force-app/main/default/objects/FTMSSO__c/fields/POLformula__c.field-meta.xml
<CustomField>
    <fullName>POLformula__c</fullName>
    <formula>POLAOD__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POL formula</label>
    <type>Text</type>
</CustomField>