force-app/main/default/objects/FTMSSO__c/fields/PortofDischargeDetail__c.field-meta.xml
<CustomField>
    <fullName>PortofDischargeDetail__c</fullName>
    <label>Port of Discharge Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>