force-app/main/default/objects/FTMSSO__c/fields/PortofDischargeDetailPrint__c.field-meta.xml
<CustomField>
    <fullName>PortofDischargeDetailPrint__c</fullName>
    <formula>&quot;Port&quot;</formula>
    <label>Port of Discharge Detail-Print</label>
    <type>Text</type>
</CustomField>