force-app/main/default/objects/FTMSSO__c/fields/PortofLoadingDetail__c.field-meta.xml
<CustomField>
    <fullName>PortofLoadingDetail__c</fullName>
    <label>Port of Loading Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>