force-app/main/default/objects/FTMSSO__c/fields/PrealertIssueDeadline__c.field-meta.xml
<CustomField>
    <fullName>PrealertIssueDeadline__c</fullName>
    <label>Pre-alert Issue Deadline</label>
    <type>Date</type>
</CustomField>