force-app/main/default/objects/FTMSSO__c/fields/PreCarriageBy__c.field-meta.xml
<CustomField>
    <fullName>PreCarriageBy__c</fullName>
    <label>Pre-Carriage By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>