force-app/main/default/objects/FTMSSO__c/fields/Precarriagevoyage__c.field-meta.xml
<CustomField>
    <fullName>Precarriagevoyage__c</fullName>
    <label>Pre-carriage/voyage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>