force-app/main/default/objects/FTMSSO__c/fields/Prepaid_check_box_HBL__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_check_box_HBL__c</fullName>
    <formula>IF(TEXT(HouseFreightCollectPrepaid__c)=&quot;Prepaid&quot;,&quot;X&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepaid check box (HBL)</label>
    <type>Text</type>
</CustomField>