force-app/main/default/objects/FTMSSO__c/fields/PrepaidAt__c.field-meta.xml
<CustomField>
    <fullName>PrepaidAt__c</fullName>
    <label>Prepaid At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>