force-app/main/default/objects/FTMSSO__c/fields/ProfitINCLTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxFCY__c</fullName>
    <label>Profit INCL Tax (USD)</label>
    <summarizedField>FTMSBill__c.ProfitINCLTaxFCY__c</summarizedField>
    <summaryForeignKey>FTMSBill__c.FTMSSO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>