force-app/main/default/objects/FTMSSO__c/fields/ProfitINCLTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxLocal__c</fullName>
    <label>Profit INCL Tax (Local)</label>
    <summarizedField>FTMSBill__c.ProfitINCLTaxLocal__c</summarizedField>
    <summaryForeignKey>FTMSBill__c.FTMSSO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>