force-app/main/default/objects/FTMSSO__c/fields/ProfitInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxUSD__c</fullName>
    <formula>TotalSellingInclTaxUSD__c - TotalBuyingInclTaxUSD__c</formula>
    <label>Profit Incl Tax (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>