force-app/main/default/objects/FTMSSO__c/fields/ProfitInclTaxVND__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxVND__c</fullName>
    <formula>TotalSellingInclTaxVND__c -  TotalBuyingInclTaxVND__c</formula>
    <label>Profit Incl Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>