force-app/main/default/objects/FTMSSO__c/fields/ProfitNICTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxFCY__c</fullName>
    <label>Profit NIC Tax (USD)</label>
    <summarizedField>FTMSBill__c.ProfitNICTaxFCY__c</summarizedField>
    <summaryForeignKey>FTMSBill__c.FTMSSO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>