force-app/main/default/objects/FTMSSO__c/fields/ProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxLocal__c</fullName>
    <label>Profit NIC Tax (Local)</label>
    <summarizedField>FTMSBill__c.ProfitNICTaxLocal__c</summarizedField>
    <summaryForeignKey>FTMSBill__c.FTMSSO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>