force-app/main/default/objects/FTMSSO__c/fields/ProfitNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxUSD__c</fullName>
    <formula>TotalAmountofSellingUSD__c -  TotalAmountofBuyingUSD__c</formula>
    <label>Profit NIC Tax (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>